--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ctf0/media-manager": "^3.6",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "haruncpi/laravel-log-reader": "^1.0",
         "intervention/image": "^2.5",
         "laravel/framework": "6.9",
         "laravel/helpers": "^1.1",
