--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/helpers": "^1.1",
         "laravel/passport": "^7.4",
         "laravel/tinker": "^1.0",
+        "pavel-mironchik/laravel-backup-panel": "^1.3",
         "qcod/laravel-app-settings": "^1.2",
         "shetabit/visitor": "^2.0",
         "spatie/laravel-backup": "^6.7",
